--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>Developer Portfolio</title>
-    <meta name="title" content="Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <title>Matty</title>
+    <meta name="title" content="Developer Portfolio">
+    <meta name="description" content="Software Developer Portfolio that helps you showcase your work and skills as a software developer">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <!-- <meta property="og:url" content="https://developerfolio.js.org/"> -->
     <meta property="og:url" content="/">
 
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta property="og:title" content="DeveloperFolio | Developer Portfolio">
     <meta property="og:description" content="Software Developer Portfolio that helps me showcase my work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
@@ -24,7 +24,7 @@
     <!-- <meta property="twitter:url" content="https://developerfolio.js.org/"> -->
     <meta property="twitter:url" content="/">
 
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta property="og:title" content="DeveloperFolio | Developer Portfolio">
     <meta property="og:description" content="Software Developer Portfolio that helps me showcase my work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
