--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <!-- <meta property="og:url" content="https://developerfolio.js.org/"> -->
     <meta property="og:url" content="/">
 
     <meta property="og:title" content="DeveloperFolio | Developer Portfolio">
@@ -21,13 +20,11 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <!-- <meta property="twitter:url" content="https://developerfolio.js.org/"> -->
     <meta property="twitter:url" content="/">
 
     <meta property="og:title" content="DeveloperFolio | Developer Portfolio">
     <meta property="og:description" content="Software Developer Portfolio that helps me showcase my work and skills as a software developer">
     <!-- Link to a hosted image -->
-    <!-- <meta property="twitter:image" content=""> -->
 
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6c63ff" />
@@ -35,9 +32,9 @@
     <!-- Customize icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v8=qAJ44G5Bm7">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v8=qAJ44G5Bm7">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5">
+    <!-- <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v8=qAJ44G5Bm7">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7"> -->
 	  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
